--- a/frontend/src/assets/scss/pages/_register.scss
+++ b/frontend/src/assets/scss/pages/_register.scss
@@ -46,7 +46,7 @@
             border-color: #017561;
           }
           &::placeholder {
-            color: $dark-sidebar-hover;
+            color: var(--sidebar-hover);
           }
         }
 
