--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -1,29 +1,30 @@
-// Fonts
-$font-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  "Helvetica Neue", Arial, sans-serif;
+:root {
+  --bg-color: #ffffff;
+  --chat-bg: #f1f1f1;
+  --text-color: #111b21;
+  --secondary-text: #555555;
+  --sent-msg: #d9fdd3;
+  --received-msg: #ffffff;
+  --accent: #25d366;
+  --link: #0078f4;
+  --icon: #54656f; // #54656F #3B4A54
+  --sidebar-bg: #f0f2f5;
+  --sidebar-hover: #f0f2f5; // #d9dbdf;
+  --font-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
+}
 
 // Dark Mode Colors
-$dark-bg: #121212;
-$dark-chat-bg: #1e1e1e;
-$dark-text: #e1e1e1;
-$dark-secondary-text: #8a8a8a;
-$dark-sent-msg: #25d366;
-$dark-received-msg: #343434;
-$dark-accent: #25d366;
-$dark-link: #0078f4;
-$dark-icon: #ffffff;
-$dark-sidebar-bg: #202c33;
-$dark-sidebar-hover: #2c3e50;
-
-// Light Mode Colors
-$light-bg: #ffffff;
-$light-chat-bg: #f1f1f1;
-$light-text: #121212;
-$light-secondary-text: #555555;
-$light-sent-msg: #25d366;
-$light-received-msg: #ececec;
-$light-accent: #25d366;
-$light-link: #0078f4;
-$light-icon: #333333;
-$light-sidebar-bg: #f7f7f7;
-$light-sidebar-hover: #f0f0f0;
+.dark-mode {
+  --bg-color: #111b21;
+  --chat-bg: #1e1e1e;
+  --text-color: #e1e1e1;
+  --secondary-text: #8a8a8a;
+  --sent-msg: #005c4b;
+  --received-msg: #202c33;
+  --accent: #25d366;
+  --link: #0078f4;
+  --icon: #aebac1;
+  --sidebar-bg: #202c33; //#8696A0
+  --sidebar-hover: #2a3942; // #202C33
+}
