--- a/frontend/src/assets/scss/components/_leftPanel.scss
+++ b/frontend/src/assets/scss/components/_leftPanel.scss
@@ -1,10 +1,14 @@
 .leftPanel {
   height: 100%;
-  background: red;
+  background: var(--sidebar-bg);
+  width: 13%;
+
   .row {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding: 25px 0;
+
     .topList {
       display: flex;
       flex-direction: column;
@@ -16,6 +20,20 @@
       flex-direction: column;
       align-items: center;
       gap: 30px;
+      .bottomItem {
+        img {
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          border: 1px solid #c9c6c6f0;
+        }
+      }
+    }
+
+    .icon {
+      color: var(--icon);
+      width: 28px;
+      height: 28px;
     }
   }
 }
