--- a/frontend/src/assets/scss/pages/_welcome.scss
+++ b/frontend/src/assets/scss/pages/_welcome.scss
@@ -3,7 +3,7 @@
 .welcome {
   width: 100vw;
   height: 100vh;
-  background: $dark-chat-bg;
+  background: var(--chat-bg);
   .container {
     .row {
       flex-direction: column;
@@ -26,13 +26,13 @@
         gap: 20px;
         margin-bottom: 100px;
         h1 {
-          color: $dark-text;
+          color: var(--text-color);
           font-weight: 400;
           font-size: 24px;
         }
 
         p {
-          color: $dark-secondary-text;
+          color: var(--secondary-text);
           font-size: 14px;
           text-align: center;
         }
@@ -41,7 +41,7 @@
           margin-top: 10px;
           width: 200px;
           height: 35px;
-          color: $dark-bg;
+          color: var(--bg-color);
           display: flex;
           align-items: center;
           justify-content: center;
