--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -1,17 +1,90 @@
 .chatList {
-  width: 85%;
+  width: 100%;
   margin: 0 auto;
-  .chatItem {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .profileImg {
-    }
-    .content {
-    }
-    .details {
-      display: flex;
+  background: var(--bg-color);
+  padding: 25px 0;
+  .container {
+    width: 95%;
+    .row {
       flex-direction: column;
+      gap: 20px;
+      .chatHeader {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        .moreIcons {
+          display: flex;
+          gap: 25px;
+          padding: 0 10px;
+          .icon {
+            color: var(--icon);
+            width: 28px;
+            height: auto;
+          }
+        }
+      }
+      .searchBar {
+        width: 100%;
+        input {
+          background: var(--sidebar-bg);
+          width: 100%;
+          outline: none;
+          border: none;
+          border-radius: 10px;
+          height: 40px;
+          padding: 0 20px;
+          &::placeholder {
+            color: var(--icon);
+            font-size: 18px;
+          }
+        }
+      }
+      .chatFilter {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        span {
+          background: var(--sidebar-bg);
+          padding: 6px 10px;
+          border-radius: 50px;
+          color: var(--icon);
+        }
+      }
+      .conversationList {
+        padding: 0 5px;
+        .chatItem {
+          display: flex;
+          align-items: center;
+          width: 100%;
+          gap: 20px;
+          .profileImg {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img {
+              width: 45px;
+              height: 45px;
+              border-radius: 50%;
+              border: 1px solid #f7f7f7;
+            }
+          }
+          .content {
+            width: 100%;
+            justify-content: space-between;
+            display: flex;
+            .info {
+            }
+            .details {
+              display: flex;
+              flex-direction: column;
+              .date {
+                color: var(--icon);
+                font-size: 12px;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
