--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -10,6 +10,7 @@
   --icon: #54656f; // #54656F #3B4A54
   --sidebar-bg: #f0f2f5;
   --sidebar-hover: #f0f2f5; // #d9dbdf;
+  --active-tab-bg: #e7fce3;
   --font-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
 }
@@ -27,4 +28,5 @@
   --icon: #aebac1;
   --sidebar-bg: #202c33; //#8696A0
   --sidebar-hover: #2a3942; // #202C33
+  --active-tab-bg: #0a332c;
 }
