--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -2,9 +2,9 @@
   width: 100%;
   margin: 0 auto;
   background: var(--bg-color);
-  padding: 25px 0;
+  padding: 25px 0 25px 15px;
   .container {
-    width: 95%;
+    width: 100%;
     .row {
       flex-direction: column;
       gap: 20px;
@@ -49,9 +49,20 @@
           border-radius: 50px;
           color: var(--icon);
         }
+        .active {
+          color: #008069;
+          background: var(--active-tab-bg);
+        }
       }
       .conversationList {
         padding: 0 5px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding-right: 15px;
+        overflow-y: auto;
+        scrollbar-width: thin;
+        scrollbar-color: #ced0d1 #fff;
         .chatItem {
           display: flex;
           align-items: center;
@@ -71,14 +82,32 @@
           .content {
             width: 100%;
             justify-content: space-between;
+            align-items: center;
             display: flex;
+            padding: 15px 0;
+            border-bottom: 1px solid var(--sidebar-bg);
             .info {
             }
             .details {
               display: flex;
               flex-direction: column;
+              gap: 5px;
               .date {
                 color: var(--icon);
+                font-size: 12px;
+              }
+              .unread {
+                background: var(--accent);
+                color: #fff;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                font-weight: 500;
+                width: 22px;
+                height: 22px;
+                padding-bottom: 1px;
+                padding-right: 1px;
                 font-size: 12px;
               }
             }
