--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -13,7 +13,8 @@
   --sidebar-bg: #f0f2f5;
   --sidebar-hover: #f0f2f5; // #d9dbdf;
   --active-tab-bg: #e7fce3;
-  --shadow-rgb: 11, 20, 26;
+  --blue-light: #009de2;
+  --chat-scroll-color: rgba(11, 20, 26, 0.2);
   --font-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
 }
@@ -33,4 +34,5 @@
   --sidebar-bg: #202c33; //#8696A0
   --sidebar-hover: #2a3942; // #202C33
   --active-tab-bg: #0a332c;
+  // --chat-scroll-color: #323a3f90;
 }
