--- a/frontend/src/assets/scss/components/_messageList.scss
+++ b/frontend/src/assets/scss/components/_messageList.scss
@@ -1,7 +1,12 @@
 .messageList {
   width: 100%;
+  height: 100%;
   padding: 10px 40px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--chat-scroll-color) transparent;
 }
