--- a/frontend/src/assets/scss/components/_chatWindow.scss
+++ b/frontend/src/assets/scss/components/_chatWindow.scss
@@ -1,4 +1,7 @@
 .chatWindow {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 65%;
   height: 100%;
   background: green;
