--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -1,4 +1,6 @@
 :root {
+  --font-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
   --bg-color: #ffffff;
   --chat-bg: #f1f1f1;
   --text-color: #111b21;
@@ -15,8 +17,7 @@
   --active-tab-bg: #e7fce3;
   --blue-light: #009de2;
   --chat-scroll-color: rgba(11, 20, 26, 0.2);
-  --font-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, sans-serif;
+  --scrollbar-color: #c2c6c9;
 }
 
 // Dark Mode Colors
@@ -34,5 +35,5 @@
   --sidebar-bg: #202c33; //#8696A0
   --sidebar-hover: #2a3942; // #202C33
   --active-tab-bg: #0a332c;
-  // --chat-scroll-color: #323a3f90;
+  --scrollbar-color: #323a3f90;
 }
