--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -7,6 +7,7 @@
 
 // Components
 @use "./components/chatWindow";
+@use "./components/_chatHeader";
 @use "./components/messageInputContainer";
 @use "./components/messageItem";
 @use "./components/messageList";
