feat:when open a chat, mark as read

--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -24,7 +24,10 @@
         }
       }
       .searchBar {
-        width: 100%;
+        width: 97%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         input {
           background: var(--sidebar-bg);
           width: 100%;
