--- a/frontend/src/assets/scss/pages/_login.scss
+++ b/frontend/src/assets/scss/pages/_login.scss
@@ -1,14 +1,13 @@
-@use "../variables" as *;
-
-.register {
+.login {
   background: #fcf5eb;
   height: 100vh;
   user-select: none;
   .container {
+    // width: 60%;
     .row {
+      height: 100%;
       align-items: center;
       justify-content: center;
-      height: 100%;
       .content {
         background: #fff;
         border: 1px solid #000;
@@ -21,32 +20,31 @@
         border-radius: 35px;
         gap: 25px;
         text-align: center;
-
         h4 {
           letter-spacing: 1px;
           font-size: 32px;
           font-weight: 500;
           color: #111b21;
         }
-        p {
-          font-size: 18px;
-          font-weight: 500;
-        }
+
         input {
           border: 1px solid #000;
           border-radius: 24px;
           font-size: 18px;
-          max-width: 300px;
-          max-height: 20px;
+          max-width: 250px;
+          max-height: 15px;
           width: 100%;
           height: 100%;
           padding: 25px;
           outline: none;
+          text-align: center;
+
           &:focus {
             border-color: #017561;
           }
           &::placeholder {
             color: var(--icon);
+            text-align: center;
           }
         }
 
@@ -67,41 +65,21 @@
           width: 100%;
           height: 100%;
         }
-
-        .spinner {
-          width: 15px;
-          height: 15px;
-          border: 2px solid white;
-          border-top-color: transparent;
-          border-radius: 50%;
-          animation: spin 0.8s linear infinite;
-        }
-
-        @keyframes spin {
-          from {
-            transform: rotate(0deg);
-          }
-          to {
-            transform: rotate(360deg);
-          }
-        }
       }
     }
   }
 }
 
 @media (max-width: 768px) {
-  .register {
+  .login {
     .container {
       .row {
         .content {
           width: 90%;
           height: 80%;
+
           h4 {
             font-size: 25px;
-          }
-          p {
-            font-size: 14px;
           }
 
           input {
@@ -126,7 +104,7 @@
 }
 
 @media (max-width: 375px) {
-  .register {
+  .login {
     .container {
       .row {
         .content {
@@ -137,9 +115,6 @@
 
           h4 {
             font-size: 20px;
-          }
-          p {
-            font-size: 12px;
           }
 
           input {
