--- a/frontend/src/assets/scss/_base.scss
+++ b/frontend/src/assets/scss/_base.scss
@@ -23,3 +23,21 @@ body {
   display: flex;
   width: 100%;
 }
+
+.spinner {
+  width: 15px;
+  height: 15px;
+  border: 2px solid white;
+  border-top-color: transparent;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
