--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -58,6 +58,7 @@
         }
       }
       .conversationList {
+        height: 100%;
         padding: 0 5px;
         display: flex;
         flex-direction: column;
@@ -114,6 +115,18 @@
                 font-size: 12px;
               }
             }
+          }
+        }
+
+        .noResult {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          span {
+            font-size: 18px;
+            color: var(--icon);
           }
         }
       }
