--- a/frontend/src/assets/scss/components/__chatHeader.scss
+++ b/frontend/src/assets/scss/components/__chatHeader.scss
@@ -12,11 +12,17 @@
         width: 80%;
         cursor: pointer;
         .userProfile {
+          width: 45px;
+          height: 45px;
           img {
-            width: 40px;
-            height: 40px;
             border-radius: 50%;
             object-fit: cover;
+            width: 100%;
+            height: 100%;
+          }
+          .defaultImg {
+            width: 45px;
+            height: 45px;
           }
         }
 
