uploading media files

--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -27,6 +27,12 @@
   --secondary-light: #d1d7db;
   --secondary-dark: #3b4a54;
   --divider: rgba(17, 27, 33, 0.1);
+  --attachment-type-camera-color: #ff2e74;
+  --attachment-type-photos-color: #007bfc;
+  --attachment-type-documents-color: #7f66ff;
+  --shadow-rgb: 11, 20, 26;
+  --background-active: rgba(11, 20, 26, 0.1);
+  --preview-bg: #e9edef;
 }
 
 // Dark Mode Colors
