--- a/frontend/src/assets/scss/pages/_chat.scss
+++ b/frontend/src/assets/scss/pages/_chat.scss
@@ -4,3 +4,13 @@
     height: 100%;
   }
 }
+
+@media (max-width: 768px) {
+  .chat {
+    .row {
+      .activeWindow {
+        display: flex !important;
+      }
+    }
+  }
+}
