--- a/frontend/src/assets/scss/components/_leftPanel.scss
+++ b/frontend/src/assets/scss/components/_leftPanel.scss
@@ -31,3 +31,23 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .leftPanel {
+    width: 100%;
+    height: 50px;
+    .row {
+      flex-direction: row;
+      justify-content: space-evenly;
+
+      .topList {
+        flex-direction: row;
+        gap: 50px;
+      }
+      .bottomList {
+        flex-direction: row;
+        gap: 50px;
+      }
+    }
+  }
+}
