--- a/frontend/src/assets/scss/components/__chatHeader.scss
+++ b/frontend/src/assets/scss/components/__chatHeader.scss
@@ -21,8 +21,8 @@
             height: 100%;
           }
           .defaultImg {
-            width: 45px;
-            height: 45px;
+            width: 100%;
+            height: 100%;
           }
         }
 
@@ -45,6 +45,29 @@
           svg {
             width: 28px;
             height: 28px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 425px) {
+  .chatHeader {
+    height: 70px;
+    .container {
+      .row {
+        .userInfo {
+          gap: 15px;
+          .userProfile {
+            width: 40px;
+            height: 40px;
+          }
+
+          .userName {
+            h3 {
+              font-size: 16px;
+            }
           }
         }
       }
