sidebar chatlist responsive

--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   background: var(--bg-color);
   padding: 20px 0 25px 15px;
+  height: 100%;
   .row {
     flex-direction: column;
     gap: 20px;
@@ -67,7 +68,6 @@
         gap: 10px;
         cursor: pointer;
         .profileImgContainer {
-          width: 15%;
           .profileImg {
             width: 55px;
             height: 55px;
@@ -85,7 +85,7 @@
           }
         }
         .content {
-          width: 95%;
+          width: 100%;
           justify-content: space-between;
           align-items: center;
           display: flex;
@@ -134,7 +134,45 @@
 
 @media (max-width: 768px) {
   .chatList {
-    padding: 0;
-    height: 92%;
+    padding: 20px 15px 25px 15px;
+    .row {
+      gap: 16px;
+      .heading {
+        .moreIcons {
+          gap: 16px;
+          padding: 0;
+        }
+      }
+      .searchBar {
+        width: 100%;
+        input {
+          padding: 0 18px;
+          &::placeholder {
+            font-size: 16px;
+          }
+        }
+      }
+
+      .conversationList {
+        padding: 0 10px;
+        gap: 0;
+        .chatItem {
+          gap: 12px;
+          .profileImgContainer {
+            .profileImg {
+              width: 50px;
+              height: 50px;
+              .defaultImg {
+                width: 50px;
+                height: 50px;
+              }
+            }
+          }
+          .content {
+            padding: 10px 0;
+          }
+        }
+      }
+    }
   }
 }
