--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -4,6 +4,8 @@
   background: var(--bg-color);
   padding: 20px 0 25px 15px;
   height: 100%;
+  background: red;
+
   .row {
     flex-direction: column;
     gap: 20px;
