--- a/frontend/src/assets/scss/components/_leftPanel.scss
+++ b/frontend/src/assets/scss/components/_leftPanel.scss
@@ -2,7 +2,7 @@
   height: 100%;
   background: var(--sidebar-bg);
   width: 13%;
-
+  background: green;
   .row {
     flex-direction: column;
     justify-content: space-between;
