--- a/frontend/src/assets/scss/pages/_chat.scss
+++ b/frontend/src/assets/scss/pages/_chat.scss
@@ -7,6 +7,7 @@
 
 @media (max-width: 768px) {
   .chat {
+    min-height: 100%;
     .row {
       .activeWindow {
         display: flex !important;
