--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -4,7 +4,7 @@
   background: var(--bg-color);
   padding: 20px 0 25px 15px;
   height: 100%;
-  background: red;
+  // background: red;
 
   .row {
     flex-direction: column;
