--- a/frontend/src/assets/scss/pages/_chat.scss
+++ b/frontend/src/assets/scss/pages/_chat.scss
@@ -1,5 +1,7 @@
 .chat {
-  height: 100vh;
+  // height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   .row {
     height: 100%;
   }
@@ -7,7 +9,7 @@
 
 @media (max-width: 768px) {
   .chat {
-    min-height: 100%;
+    // min-height: 100%;
     .row {
       .activeWindow {
         display: flex !important;
