--- a/frontend/src/assets/scss/_base.scss
+++ b/frontend/src/assets/scss/_base.scss
@@ -10,7 +10,7 @@
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
-  // overflow: hidden;
+  overflow: hidden;
 }
 
 .container {
