feat: setting layout, logout, user info

--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -33,6 +33,7 @@
   --shadow-rgb: 11, 20, 26;
   --background-active: rgba(11, 20, 26, 0.1);
   --preview-bg: #e9edef;
+  --danger: #ea0038;
 }
 
 // Dark Mode Colors
