switching between themes

--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -37,7 +37,7 @@
 }
 
 // Dark Mode Colors
-.dark-mode {
+[data-theme="dark"] {
   --bg-color: #111b21;
   --chat-bg: #1e1e1e;
   --text-color: #e9edef;
