--- a/frontend/src/assets/scss/components/_chatWindow.scss
+++ b/frontend/src/assets/scss/components/_chatWindow.scss
@@ -2,8 +2,10 @@
   display: flex;
   height: 100%;
   width: 65%;
-  background: green;
   overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
   .row {
     flex-direction: column;
     height: 100%;
@@ -63,4 +65,3 @@
     }
   }
 }
-
