--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -8,7 +8,7 @@
 
 // Components
 @use "./components/chatWindow";
-@use "./components/_chatHeader";
+@use "./components/chatHeader";
 @use "./components/messageInputContainer";
 @use "./components/messageItem";
 @use "./components/messageList";
@@ -22,3 +22,5 @@
 @use "./components/settings";
 @use "./components/popupModal";
 @use "./components/wallpaper";
+@use "./components/statusList";
+@use "./components/storyViewer";
