--- a/frontend/src/assets/scss/components/_storyViewer.scss
+++ b/frontend/src/assets/scss/components/_storyViewer.scss
@@ -1,9 +1,27 @@
-.storyViewerOverlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 9999;
+.storyViewerOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(65, 65, 65, 0.9);
+  z-index: 9999;
+  backdrop-filter: blur(10px);
+
+  .storyContainer {
+    width: 30%;
+    margin: 0 auto;
+    overflow: hidden;
+    background-color: #000;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+  }
 }
+
+// @media (min-width: 768px) {
+//   .storyViewerOverlay {
+//     .storyContainer {
+//       width: 100%;
+//       height: 100%;
+//     }
+//   }
+// }
