--- a/frontend/src/assets/scss/components/_storyViewer.scss
+++ b/frontend/src/assets/scss/components/_storyViewer.scss
@@ -17,11 +17,10 @@
   }
 }
 
-// @media (min-width: 768px) {
-//   .storyViewerOverlay {
-//     .storyContainer {
-//       width: 100%;
-//       height: 100%;
-//     }
-//   }
-// }
+@media (max-width: 768px) {
+  .storyViewerOverlay {
+    .storyContainer {
+      width: 100% !important;
+    }
+  }
+}
