--- a/frontend/src/assets/scss/components/_popupModal.scss
+++ b/frontend/src/assets/scss/components/_popupModal.scss
@@ -37,7 +37,7 @@
             font-size: 20px;
           }
         }
-        .content {
+        .popupContent {
           color: var(--secondary-dark);
           font-size: 14px;
           margin-left: 5px;
