--- a/frontend/src/assets/scss/components/_storyViewer.scss
+++ b/frontend/src/assets/scss/components/_storyViewer.scss
@@ -15,42 +15,50 @@
     background-color: #000;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     position: relative;
-    .moreBtn {
+
+    .storyHeader {
       position: absolute;
       top: 20px;
       right: 10px;
-      border: none;
-      color: white;
-      font-size: 20px;
-      cursor: pointer;
-    }
-    .dropdown {
-      position: absolute;
-      top: 45px;
-      right: 20px;
-      background-color: #fff;
       z-index: 10000;
-      width: 90px;
-
-      border-radius: 3px;
-      transform-origin: right top;
-      transform: scale(1);
-      opacity: 1;
-      max-width: 340px;
-      padding: 5px 0;
-      box-shadow: 0 2px 5px 0 rgba(var(--shadow-rgb), 0.26),
-        0 2px 10px 0 rgba(var(--shadow-rgb), 0.16);
-
-      .deleteBtn {
-        color: var(--secondary-dark);
-        font-size: 15px;
-        width: 100%;
+      .moreBtn {
+        border: none;
+        color: white;
+        font-size: 20px;
+        cursor: pointer;
+      }
+      .dropdown {
+        position: absolute;
+        top: 25px;
+        right: 5px;
+        background-color: #fff;
+        z-index: 10000;
+        width: 90px;
         transition: 0.5s ease;
-        padding: 5px 15px;
-        text-align: left;
-        &:hover {
-          background: var(--sidebar-hover);
+        border-radius: 3px;
+        transform-origin: right top;
+        transform: scale(0);
+        opacity: 0;
+        max-width: 340px;
+        padding: 5px 0;
+        box-shadow: 0 2px 5px 0 rgba(var(--shadow-rgb), 0.26),
+          0 2px 10px 0 rgba(var(--shadow-rgb), 0.16);
+
+        .deleteBtn {
+          color: var(--secondary-dark);
+          font-size: 15px;
+          width: 100%;
+          transition: 0.5s ease;
+          padding: 5px 15px;
+          text-align: left;
+          &:hover {
+            background: var(--sidebar-hover);
+          }
         }
+      }
+      .show {
+        opacity: 1;
+        transform: scale(1);
       }
     }
   }
