--- a/frontend/src/assets/scss/components/_messageInputContainer.scss
+++ b/frontend/src/assets/scss/components/_messageInputContainer.scss
@@ -1,6 +1,7 @@
 .messageInputContainer {
   background: var(--sidebar-bg);
   padding: 10px 15px 12px 15px;
+  position: relative;
   .row {
     justify-content: space-around;
     flex-direction: row;
