--- a/frontend/src/assets/scss/components/_chatWindow.scss
+++ b/frontend/src/assets/scss/components/_chatWindow.scss
@@ -8,6 +8,8 @@
   background-position: center center;
   .row {
     flex-direction: column;
+  overflow: hidden;
+
     height: 100%;
     width: 100%;
     transition: 0.3s ease-in-out;
