--- a/frontend/src/assets/scss/_base.scss
+++ b/frontend/src/assets/scss/_base.scss
@@ -12,8 +12,8 @@ body {
   color: var(--text-color);
   // overflow: hidden;
 
-  overscroll-behavior-y: none;
-  touch-action: manipulation;
+  // overscroll-behavior-y: none;
+  // touch-action: manipulation;
 }
 
 .container {
